# RFR

./: .gitignore  CHANGELOG.md  CITATION.cff  ERRATUM_v1.1.1.md  README.md  RESULTS.md  RFR_WHITEPAPER.tex  RFR_WHITEPAPER_v1.1.1.tex  RFR_WHITEPAPER_v1.1.tex  pyproject.toml
TopographicMaps/: README.md  pyproject.toml
TopographicMaps/tests/: test_demo.py  test_heightmap.py  test_routing.py
TopographicMaps/topographic_maps/: __init__.py  _rfr.py  comparative_visualise.py  demo.py  heightmap.py  routing.py  sample_data.py  visualise.py
independent_review/: REPORT.md  banded.py  bench.py  bench2.py  results.jsonl  results_banded.jsonl  results_banded.jsonl.bak
results/: operational_v4_latest.json  operational_v4_lean_latest.json  operational_v5_latest.json  operational_v6_hybrid_latest.json  operational_v6_latest.json  operational_v6_smoke.json  spatial_mvp_profiles_latest.json  spatial_scale_latest.json  specialisation_latest.json
rfr/: __init__.py  algorithms.py  analysis.py  benchmark.py  graphs.py  invariant_band.py  operational.py  spatial.py  spatial_scale.py  specialisation.py
rfr/mvps/: __init__.py  distance_field.py  game_heatmap.py  geospatial.py  image_field.py  occupancy.py  terrain.py  wavefront.py
tests/: test_distance_field.py  test_game_heatmap.py  test_geospatial.py  test_image_field.py  test_internal_closure.py  test_invariant_band.py  test_occupancy.py  test_rfr.py  test_spatial.py  test_terrain.py  test_wavefront.py
